src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Simon</fullName>
        <description>Proceso comercial Simon</description>
        <isActive>true</isActive>
        <values>
            <fullName>Adjudicada a otro distribuidor</fullName>
        </values>
        <values>
            <fullName>Adjudicada totalmente</fullName>
        </values>
        <values>
            <fullName>Licitación</fullName>
        </values>
        <values>
            <fullName>Parada</fullName>
        </values>
        <values>
            <fullName>Pendiente</fullName>
        </values>
        <values>
            <fullName>Perdida</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>KS_Agente_de_contabilizacion__c</fullName>
        <label>Agente de contabilización</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>KS_Contabiliza__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>KS_Contabilizacion</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Aprobado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aprobado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_AreaF__c</fullName>
        <formula>TEXT( KS_Organizacion_Cliente__r.KS_Area__c )</formula>
        <label>Área Fórmula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Area__c</fullName>
        <label>Área</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Area</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_COUNT_LineasOferta__c</fullName>
        <label>KS_COUNT_LineasOferta</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>KS_Canal__c</fullName>
        <formula>TEXT(KS_Organizacion_Cliente__r.KS_Canal_de_distribucion__c)</formula>
        <label>Canal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Cliente_final_Importe_PVP__c</fullName>
        <formula>Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cliente final Importe PVP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_Cliente_final_MSC_en_PVP__c</fullName>
        <label>Cliente final MSC en PVP</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.KS_Destinatario__c</field>
            <operation>equals</operation>
            <value>Cliente final</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>KS_Cliente_final__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente final / Prescriptor</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR (2 AND 3)</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Clientes finales, Prescriptores</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Lead</value>
            </filterItems>
            <filterItems>
                <field>Account.KS_Canal__c</field>
                <operation>notEqual</operation>
                <value>Distribuidores CRM, Instalador, Asociaciones</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ofertas (Cliente final)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Contabiliza__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contabiliza</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Creador_Name__c</fullName>
        <formula>CreatedBy.FirstName + &apos; &apos; + CreatedBy.LastName</formula>
        <label>Creador Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_DelegacionF__c</fullName>
        <formula>TEXT( KS_Organizacion_Cliente__r.KS_Delegacion__c )</formula>
        <label>Delegación Fórmula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Delegacion__c</fullName>
        <label>Delegación</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Delegacion</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Descuento_total_Cliente_Final__c</fullName>
        <formula>IF( KS_Cliente_final__c &lt;&gt;&apos;&apos;,
1-( KS_Importe_total_Cliente_Final__c /  KS_Cliente_final_Importe_PVP__c )
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Descuento total Cliente Final</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Descuento_total_Distribuidor__c</fullName>
        <formula>1- (KS_Importe_total_fichas__c / KS_Distribuidor_importe_PVP__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Descuento total Distribuidor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Descuento_total_Instalador__c</fullName>
        <formula>1- (KS_Importe_total_Instalador_c__c /  KS_Instalador_Importe_PVP__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Descuento total Instalador</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Distribuidor_CRM__c</fullName>
        <formula>KS_Distribuidor__r.RecordType.DeveloperName == &apos;KS_Distribuidores&apos;</formula>
        <label>Distribuidor CRM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Distribuidor_MSC_en_PVP__c</fullName>
        <label>Distribuidor MSC en PVP</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.KS_Destinatario__c</field>
            <operation>equals</operation>
            <value>Distribuidor</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>KS_Distribuidor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distribuidor</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR (2 AND 3)</booleanFilter>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>KS_Distribuidores</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>KS_Distribuidores_SAP</value>
            </filterItems>
            <filterItems>
                <field>Account.KS_Grupo_de_ctas_deudor__c</field>
                <operation>notEqual</operation>
                <value>Destinatarios mercancías</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ofertas (Distribuidor)</relationshipLabel>
        <relationshipName>Oportunidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Distribuidor_importe_PVP__c</fullName>
        <formula>Amount -  KS_Distribuidor_MSC_en_PVP__c - KS_Cliente_final_MSC_en_PVP__c - KS_Instalador_MSC_en_PVP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distribuidor importe PVP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_Dto_Volumen__c</fullName>
        <label>Dto. Volumen</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Email_responsable__c</fullName>
        <label>Email responsable</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>KS_Estado_de_aprobacion__c</fullName>
        <formula>IF( KS_Aprobado__c = TRUE, IMAGE(&quot;/resource/1470384173000/flag_green_png&quot;,&quot;OK&quot;,16,16), IMAGE(&quot;/resource/1470384189000/flag_red_png&quot;,&quot;KO&quot;,16,16) )</formula>
        <label>Estado de aprobación</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Funciona__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Funciona</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Importe_neto_esperado__c</fullName>
        <formula>KS_Importe_total_fichas__c * KS_Probabilidad__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Importe neto esperado</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_Importe_total_Cliente_Final__c</fullName>
        <label>Importe neto Cliente Final</label>
        <summarizedField>OpportunityLineItem.KS_Neto_por_ficha_Cliente_Final__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>KS_Importe_total_Instalador_c__c</fullName>
        <label>Importe neto Instalador</label>
        <summarizedField>OpportunityLineItem.KS_Neto_por_ficha_Instalador__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>KS_Importe_total_fichas__c</fullName>
        <label>Importe neto fichas</label>
        <summarizedField>OpportunityLineItem.KS_Neto_por_ficha__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>KS_Instalador_Importe_PVP__c</fullName>
        <formula>Amount -  KS_Cliente_final_MSC_en_PVP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Instalador Importe PVP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_Instalador_MSC_en_PVP__c</fullName>
        <label>Instalador MSC en PVP</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.KS_Destinatario__c</field>
            <operation>equals</operation>
            <value>Instalador</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>KS_Instalador__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Instalador</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR 4 OR (2 AND 3)</booleanFilter>
            <errorMessage>La cuenta indicada como Instalador no tiene dicha tipología. Tan sólo pueden aceptarse Lead de tipo Instalador o Cuentas de tipo Instalador.</errorMessage>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Instalador, Clientes finales, Prescriptores</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Lead</value>
            </filterItems>
            <filterItems>
                <field>Account.KS_Canal__c</field>
                <operation>equals</operation>
                <value>Instalador</value>
            </filterItems>
            <filterItems>
                <field>Account.Id</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ofertas (Instalador)</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Lista_de_precios__c</fullName>
        <formula>TEXT(KS_Organizacion_Cliente__r.KS_Lista_de_precios__c)</formula>
        <label>Lista de Precios</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Margen_Cliente__c</fullName>
        <label>Margen Cliente final</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Margen_Distribuidor__c</fullName>
        <label>Margen distribuidor</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Margen_Instalador__c</fullName>
        <label>Margen Instalador</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Margen_Intervinientes__c</fullName>
        <label>Margen Intervinientes</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Margen_Operacion__c</fullName>
        <label>Margen Operación</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Margen_distribuidor_pctge__c</fullName>
        <formula>(1-( KS_Importe_total_fichas__c / KS_Importe_total_Instalador_c__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Descuento distribuidor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Margen_instalador_pctge__c</fullName>
        <formula>(1- (KS_Importe_total_Instalador_c__c/KS_Importe_total_Cliente_Final__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Margen instalador</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Nivel2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nivel2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Nivel3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nivel3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Nivel4__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nivel4</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Nivel_de_aprobacion_de_4__c</fullName>
        <formula>1+
IF(KS_Nivel2__c = TRUE, 1, 0)
+
IF(KS_Nivel3__c = TRUE, 1, 0)
+
IF(KS_Nivel4__c = TRUE, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nivel de aprobación (de 4)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_Obra_Estado__c</fullName>
        <formula>TEXT(KS_Obra__r.KS_Fase__c)</formula>
        <label>Estado obra</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Obra__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Obra</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>KS_Obra__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Oportunidades</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>KS_Obra__c</referenceTo>
        <relationshipLabel>Ofertas</relationshipLabel>
        <relationshipName>Oportunidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Oferta_ID__c</fullName>
        <displayFormat>OF-{00000}</displayFormat>
        <externalId>true</externalId>
        <label>Oferta ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>KS_Oferta_Origen_String__c</fullName>
        <label>Oferta Origen (String)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Oferta_Origen__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Oferta Origen</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Oportunidades</relationshipLabel>
        <relationshipName>Ofertas</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Organizacion_Cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marca Comercial</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>KS_Organizacion_Cliente__c.KS_Cliente_solicitante__c</field>
                <operation>equals</operation>
                <valueField>$Source.KS_Distribuidor__c</valueField>
            </filterItems>
            <filterItems>
                <field>KS_Organizacion_Cliente__c.KS_Cliente_Distribucion__c</field>
                <operation>equals</operation>
                <valueField>$Source.KS_Distribuidor__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>KS_Organizacion_Cliente__c</referenceTo>
        <relationshipLabel>Oportunidades</relationshipLabel>
        <relationshipName>Oportunidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Organizacion_Ventas__c</fullName>
        <label>Organización de ventas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Organizacion_de_ventas</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Organizacion__c</fullName>
        <label>Organización de ventas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Organizacion_de_ventas</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Organizacion_de_ventas__c</fullName>
        <formula>text( KS_Organizacion_Cliente__r.KS_Organizacion_de_ventas__c )</formula>
        <label>Organización de ventas (FÓRMULA)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_PVP_con_MSC_para_Cliente_Final__c</fullName>
        <label>PVP con MSC para Cliente Final</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.KS_Destinatario__c</field>
            <operation>equals</operation>
            <value>Cliente final</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>KS_PVP_con_MSC_para_Instalador__c</fullName>
        <label>PVP con MSC para Instalador</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.KS_Destinatario__c</field>
            <operation>equals</operation>
            <value>Instalador</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>KS_PVP_con_MSC_para_Instalador_fx__c</fullName>
        <formula>KS_PVP_con_MSC_para_Instalador__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PVP con MSC para Instalador (fx)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>KS_Pais__c</fullName>
        <formula>NULLVALUE(
TEXT(KS_Distribuidor__r.ShippingCountryCode), 
TEXT(KS_Distribuidor__r.BillingCountryCode)
)</formula>
        <label>País Distribuidor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Prescrito__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prescrito</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Probabilidad__c</fullName>
        <label>Probabilidad (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_Protected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Protegido</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Referencia__c</fullName>
        <label>Ref. Proyecto/Equivalente</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Resp_Conectividad__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resp.Conectividad</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Oportunidades1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Resp_Iluminacion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resp.Iluminación</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Oportunidades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Resp_Jefe_de_Area__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resp. Jefe de Area</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Oportunidades6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Resp_Negocio_Iberia_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resp.Negocio Iberia 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Oportunidades7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Resp_Sist_Control__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resp.Sist.Control</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Oportunidades2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Resp_Vehiculo_Electrico__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resp.Vehículo Eléctrico</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Oportunidades3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Resp_negocio_iberia__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resp.Negocio Iberia</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Oportunidades5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Resp_resto_de_gamas__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resp.Resto de gamas</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Oportunidades4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Sector__c</fullName>
        <formula>text( KS_Organizacion_Cliente__r.KS_Sector_Distribuidor__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sector</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Sincronizacion__c</fullName>
        <label>Sincronización</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Organizacion_de_ventas</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Subetapa__c</fullName>
        <label>Subetapa</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <restricted>true</restricted>
            <valueSetName>KS_Subetapa</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Submitted_for_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_Suma_Dto_Ad2__c</fullName>
        <label>(Control) Suma Dto Ad 2</label>
        <summarizedField>OpportunityLineItem.KS_Dto_adicional_2__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>KS_Tiempo_elaboracion__c</fullName>
        <formula>(LastModifiedDate- CreatedDate)*24*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tiempo elaboración</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KS_WRONG_Distribuidor__c</fullName>
        <formula>KS_Distribuidor__c != KS_Organizacion_Cliente__r.KS_Cliente_Distribucion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>WRONG Distribuidor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KS_ZonaF__c</fullName>
        <formula>TEXT( KS_Organizacion_Cliente__r.KS_Zona__c )</formula>
        <label>Zona Fórmula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Zona__c</fullName>
        <label>Zona</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Zona_Geog</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_descuento_total_operacion__c</fullName>
        <formula>( Amount -  KS_Importe_total_fichas__c )/Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Descuento total operación</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>KS_max_ficha__c</fullName>
        <label>Ficha máxima</label>
        <summarizedField>OpportunityLineItem.KS_Ficha__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>KS_min_ficha__c</fullName>
        <label>Ficha mínima</label>
        <summarizedField>OpportunityLineItem.KS_Ficha__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>KS_sum_condicion_obra__c</fullName>
        <description>Sumatorio total de condiciones de obra en la Oferta</description>
        <label>Condición de Obra (TOTAL)</label>
        <summaryForeignKey>KS_Condicion_de_Obra__c.KS_Oportunidad__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MSC_Cliente_Final__c</fullName>
        <formula>KS_Cliente_final_MSC_en_PVP__c / KS_Cliente_final_Importe_PVP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% MSC Cliente Final</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSC_Distribuidor__c</fullName>
        <formula>KS_Distribuidor_MSC_en_PVP__c / KS_Distribuidor_importe_PVP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% MSC Distribuidor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MSC_Instalador__c</fullName>
        <formula>KS_Instalador_MSC_en_PVP__c /  KS_Instalador_Importe_PVP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% MSC Instalador</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PVP_con_MSC_para_Instalador_fx__c</fullName>
        <formula>KS_PVP_con_MSC_para_Instalador__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PVP con MSC para Instalador (fx)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PVP_con_MSC_para_distribuidor__c</fullName>
        <label>PVP con MSC para distribuidor</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.KS_Destinatario__c</field>
            <operation>equals</operation>
            <value>Distribuidor</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SI_ImporteNeto_probabilidad__c</fullName>
        <formula>KS_Importe_total_fichas__c *  KS_Probabilidad__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ImporteNetoxPx</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SI_ImportesPVP_probabilidad__c</fullName>
        <formula>KS_Probabilidad__c  *  Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ImportesPVPxPx</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>KS_Oferta_ID__c</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>KS_Organizacion__c</columns>
        <columns>KS_Estado_de_aprobacion__c</columns>
        <columns>KS_Nivel_de_aprobacion_de_4__c</columns>
        <columns>KS_Distribuidor__c</columns>
        <columns>KS_Instalador__c</columns>
        <columns>KS_Cliente_final__c</columns>
        <columns>KS_Obra__c</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>KS_descuento_total_operacion__c</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Todas las ofertas</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>KS_Probabilidad__c</columns>
        <columns>KS_Obra_Estado__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Las que cierran el próximo mes</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>lessOrEqual</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Las que cierran este mes</label>
        <language>es</language>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Parada,Pendiente,Licitación</value>
        </filters>
        <label>Oportunidad en curso</label>
        <language>es</language>
    </listViews>
</CustomObject>